src/main/java/com/example/springsecurityregistration/web/error/InvalidOldPasswordException.java
package com.example.springsecurityregistration.web.error;

public class InvalidOldPasswordException extends RuntimeException {

    public InvalidOldPasswordException(String message) {
        super(message);
    }
}
